# shady-tv

./: Makefile  shady-tv.cabal
src/Shady/: MechanicsGLGtk.hs  RunUI.hs
