Name:                shady-tv
Version:             0.6.0
Cabal-Version:       >= 1.6
Synopsis:            Functional GPU programming - user interfaces
Category:            Graphics, Language
Description:
  GUI generation for Shady (functional GPU programming).
  See also shady-gen, shady-graphics, shady-render, and shady-examples
  .
  Copyright 2009-2012 by Conal Elliott; GNU AGPLv3 license (see COPYING).
  This license is a place-holder.  Let me know if you'd like other terms.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Homepage:            http://github.com/conal/shady-render/
Copyright:           (c) by Conal Elliott 2009-2012
License:             OtherLicense
License-File:        COPYING
Stability:           experimental
build-type:          Simple
Source-Repository head
    type:         git
    location:     git://github.com/conal/shady-graphics.git

Library
  hs-Source-Dirs:      src

  Build-Depends:       base >=4 && < 5, mtl
                     , TypeCompose, vector-space>=0.5.6, type-unary
                     , shady-gen, shady-render
                     , glew, OpenGL>=2.4.0.1
                     -- , GLUT, time, array
                     -- For GUIs:
                     , gtk, gtkglext
                     , GtkGLTV

  Exposed-Modules:
                       Shady.MechanicsGLGtk
                       Shady.RunUI
